<resources>
    <string name="app_name">Inventory App</string>
    <string name="add_activity">Add Item</string>

    <string name="itemId">ID</string>
    <string name="itemName">Product Name</string>
    <string name="itemPrice">Price</string>
    <string name="itemQuantity">Quantity</string>
    <string name="SuppName">Supplier Name</string>
    <string name="SuppPhone">Supplier Phone Number</string>

    <string name="empty_stock">The Stock Is Empty</string>

    <string name="order_btn">Order</string>
    <string name="sell_btn">Sell</string>
    <string name="inc_btn">Add Quantity</string>
    <string name="dec_btn">decrease Quantity</string>

    <string name="title_add">Add Item</string>
    <string name="title_edit">Edit Item</string>


    <string name="delete_dialog_msg">Delete this Product ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>
