<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context="com.example.eslam.inventoryapp.MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textStyleHeaderItem"
            android:text="@string/itemId" />

        <TextView
            style="@style/textStyleHeaderItem"
            android:text="@string/itemName" />

        <TextView
            style="@style/textStyleHeaderItem"
            android:text="@string/itemPrice" />

        <TextView
            style="@style/textStyleHeaderItem"
            android:text="@string/itemQuantity" />

        <TextView
            style="@style/textStyleHeaderItem"
            android:text="@string/SuppName" />

        <TextView

            style="@style/textStyleHeaderItem"
            android:text="@string/SuppPhone" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_stock" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/padding_16"
        android:src="@drawable/ic_add_circle" />
</RelativeLayout>
